@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-12-27T01:41:52Z",
-  "count" : 129,
-  "count_minmax" : [ 127, 129 ],
-  "count_decinc" : [ -0, +129 ],
-  "uniques" : 2,
-  "uniques_minmax" : [ 2, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "timestamp" : "2025-01-08T01:42:29Z",
+  "count" : 53,
+  "count_minmax" : [ 53, 129 ],
+  "count_decinc" : [ -76, +129 ],
+  "uniques" : 1,
+  "uniques_minmax" : [ 1, 2 ],
+  "uniques_decinc" : [ -1, +2 ]
 }
