@@ -1,0 +1,9 @@
+{
+  "timestamp" : "2025-01-08T01:42:29Z",
+  "count" : 123,
+  "count_minmax" : [ 123, 123 ],
+  "count_decinc" : [ -0, +123 ],
+  "uniques" : 1,
+  "uniques_minmax" : [ 1, 1 ],
+  "uniques_decinc" : [ -0, +1 ]
+}
