@@ -1,27 +1,18 @@
 {
-  "timestamp" : "2025-01-07T01:43:10Z",
-  "count_outdated" : 238603,
-  "uniques_outdated" : 2358,
-  "count" : 240393,
-  "uniques" : 2377,
+  "timestamp" : "2025-01-08T01:42:29Z",
+  "count_outdated" : 238731,
+  "uniques_outdated" : 2359,
+  "count" : 240518,
+  "uniques" : 2378,
   "clones" : [
     {
-      "timestamp": "2024-12-24T00:00:00Z",
-      "count": 53,
-      "count_minmax": [ 53, 128 ],
-      "count_decinc": [ 75, 128 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
-    {
       "timestamp": "2024-12-25T00:00:00Z",
-      "count": 129,
-      "count_minmax": [ 127, 129 ],
-      "count_decinc": [ 0, 129 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "count": 53,
+      "count_minmax": [ 53, 129 ],
+      "count_decinc": [ 76, 129 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 1, 2 ]
     },
     {
       "timestamp": "2024-12-26T00:00:00Z",
@@ -124,12 +115,21 @@
     },
     {
       "timestamp": "2025-01-06T00:00:00Z",
-      "count": 127,
-      "count_minmax": [ 127, 127 ],
-      "count_decinc": [ 0, 127 ],
+      "count": 129,
+      "count_minmax": [ 127, 129 ],
+      "count_decinc": [ 0, 129 ],
       "uniques": 3,
       "uniques_minmax": [ 3, 3 ],
       "uniques_decinc": [ 0, 3 ]
+    },
+    {
+      "timestamp": "2025-01-07T00:00:00Z",
+      "count": 123,
+      "count_minmax": [ 123, 123 ],
+      "count_decinc": [ 0, 123 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
